Fixed login functionality and displaying user in navbar

--- a/views/temperaments.ejs
+++ b/views/temperaments.ejs
@@ -19,17 +19,17 @@
             <span class="col py-1 bg-noroff">Name</span>
             <span class="col py-1 bg-noroff">Options</span>
           </div>
-          <% temperament.forEach(function(temp) { %>
+          <% temperaments.forEach(function(temperaments) { %>
             <div class="row px-3 py-1 w-100">
               <span class="col py-1 bg-light">
-                <%=temp.Id%>
+                <%=temperaments.id%>
               </span>
               <span class="col py-1 bg-light">
-                <%=temp.Name%>
+                <%=temperaments.Temperament%>
               </span>
               <span class="col py-1 bg-light text-center">
-                <button class="btn-sm btn-warning" onclick="updateTemperament(<%=temp.Id%>)">Update temperament</button>
-                <button class="btn-sm btn-danger" onclick="deleteTemperament(<%=temp.Id%>)">Delete temperament</button>
+                <button class="btn-sm btn-warning" onclick="updateTemperament(<%=temperaments.Id%>)">Update temperament</button>
+                <button class="btn-sm btn-danger" onclick="deleteTemperament(<%=temperaments.Id%>)">Delete temperament</button>
               </span>
             </div>
             <% }); %>
