--- a/views/animals.ejs
+++ b/views/animals.ejs
@@ -6,6 +6,16 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/styles.css">
   <script src="../js/common.js"></script>
+  <!-- <script>
+    function calculateAge() {
+  let age = new Date().getFullYear() - new Date().getFullYear();
+  let month = new Date().getMonth() - new Date().getMonth();
+  if (month < 0 || (month === 0 && new Date().getDate() < new Date().getDate())) {
+    age--;
+  }
+  return age;
+}
+  </script> -->
 
 </head>
 
@@ -28,32 +38,32 @@
         <% animals.forEach(function(animal) { %>
           <div class="row px-3 py-1 w-100">
             <span class="col py-1 bg-light ">
-              <%=animal.Id%>
+              <%=animal.id%>
             </span>
             <span class="col py-1 bg-light">
               <%=animal.Name%>
             </span>
             <span class="col py-1 bg-light">
-              <%=animal.Species%>
+              <%=animal.Species.Species%>
             </span>
             <span class="col py-1 bg-light">
-              <%=animal.Birthday%>
+              <%=animal.Birthday.toLocaleDateString()%>
             </span>
             <span class="col py-1 bg-light">
-              <%=animal.Temperament%>
+              <%=animal.Temperaments.map(t => t.Temperament).join(', ')%>
             </span>
             <span class="col py-1 bg-light">
-              <%=animal.Size%>
+              <%=animal.Size.Size%>
             </span>
             <span class="col py-1 bg-light">
-              to calculate from database
+              <%= animal.Birthday %>
             </span>
             <span class="col py-1 bg-light">
               <%=animal.Adopted%>
             </span>
             <span class="col py-1 bg-light text-center">
-              <button class="btn-sm btn-warning" onclick="adoptAnimal(<%=animal.Id%>)">Adopt</button>
-              <button class="btn-sm btn-danger" onclick="deleteAnimal(<%=animal.Id%>)">Cancel Adoption</button>
+              <button class="btn-sm btn-warning" onclick="adoptAnimal(<%=animal.id%>)">Adopt</button>
+              <button class="btn-sm btn-danger" onclick="deleteAnimal(<%=animal.id%>)">Cancel Adoption</button>
             </span>
           </div>
           <% }); %>
