--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,15 +12,16 @@
 </head>
 
 <body>
+	<div>
 	<%- include('./partials/navbar.ejs') %>
 		<% if(user){%>
 			<p>You are currently logged in as the <b>
 					<%=user.username%>
 				</b></p>
-			<form action="/logout" method="post">
+			<form action="/login/logout" method="post">
 				<button class="logout" type="submit">Sign out</button>
 			</form>
-			<%}%>
+			<%} else { %>
 				<div id="login-form">
 					<form action="/login/password" method="post">
 						<section>
@@ -33,9 +34,12 @@
 						</section>
 						<button type="submit">Sign in</button>
 					</form>
+					
 					<hr>
 					<p class="help">Don't have an account? <a href="/signup">Sign up</a></p>
 				</div>
+				<% } %>
+			</div>
 
 				<footer class="info">
 					<p>Created by <a href="https://www.noroff.no/en/">Noroff</a></p>
