Fixed species add, update and delete

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,6 +13,7 @@
 
 <body>
 	<div>
+		<%- include('./partials/navbar.ejs') %>
 <% if(user){%>
 	<section id="logout-form">
 	<p>You are currently logged in as <b>
