--- a/views/species.ejs
+++ b/views/species.ejs
@@ -5,7 +5,7 @@
   <title> DAB - Adopt Animal</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/styles.css">
-  <script src="../js/common.js"></script>
+  <script src="../../js/common.js"></script>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
               </span>
               <span class="col py-1 bg-light text-center">
                 <button class="btn-sm btn-warning" onclick="updateSpecies(<%=species.id%>)">Update species</button>
-                <button class="btn-sm btn-danger" onclick="deleteSpecies( <%=species.id%>)">Delete species</button>
+                <button class="btn-sm btn-danger" onclick="confirmDelete(<%=species.id%>)">Delete species</button>
               </span>
             </div>
             <% }); %>
@@ -38,14 +38,18 @@
               <div class="col-4"></div>
               <div class="col-4 text-center mt-2">
                 <form action="/species/add" method="POST">
-                  <button class="btn btn-success" id="btn-add-animal">Add New Species</button>
+                  <div class="mb-3">
+                    <label for="speciesName" class="form-label mb-4">Species Name:</label>
+                    <input type="text" class="form-control mb-4" id="speciesName" name="Species" required>
+                  </div>
+                  <button type="submit" class="btn btn-success">Add New Species</button>
                 </form>
               </div>
               <div class="col-4"></div>
             </div>
       </div>
     </div>
-    <% } else { %>
+    <% } else if (!user || user.roles == "member") { %>
       <div class="container-fluid mt-5">
         <h3 class="p-3 text-center">403</h3>
         <div class="row px-3 py-1 w-100">
