--- a/views/species.ejs
+++ b/views/species.ejs
@@ -49,7 +49,7 @@
             </div>
       </div>
     </div>
-    <% } else if (!user || user.roles == "member") { %>
+    <% } else { %>
       <div class="container-fluid mt-5">
         <h3 class="p-3 text-center">403</h3>
         <div class="row px-3 py-1 w-100">
