--- a/views/temperaments.ejs
+++ b/views/temperaments.ejs
@@ -38,13 +38,13 @@
             <div class="row">
               <div class="col-4"></div>
               <div class="col-4 text-center mt-2">
-                <form action="/temperaments/add" method="POST">
+                <form action="/temperament/add" method="POST">
                   <div class="mb-3">
-                      <label for="temperamentsName" class="form-label mb-4">Temperament Name:</label>
-                      <input type="text" class="form-control-mb4" id="temperamentsName" name="Temperaments" required>
-                    </div>
-                    <button class="btn btn-success" id="btn-add-temperament" >Add New Temperament</button>
-                </form>
+                    <label for="temperamentsName" class="form-label mb-4">Temperament Name:</label>
+                    <input type="text" class="form-control-mb4" id="temperamentsName" name="Temperament" required>
+                  </div>
+                  <button class="btn btn-success" id="btn-add-temperament" >Add New Temperament</button>
+                </form>                
               </div>
               <div class="col-4"></div>
             </div>
