--- a/views/temperaments.ejs
+++ b/views/temperaments.ejs
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <% if (user.roles == 'admin') { %>
-  <%- include('./partials/navbar.ejs', {user: user}) %>
+  <% if (user && user.roles && user.roles === 'admin') { %>
+    <%- include('./partials/navbar.ejs', {user: user}) %>  
     <div class="container-fluid mt-5">
       <h2 class="p-3 text-center">Animals for Adoption - Temperament</h2>
         <div class="list-group">
