--- a/views/animals.ejs
+++ b/views/animals.ejs
@@ -6,17 +6,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/styles.css">
   <script src="../js/common.js"></script>
-  <!-- <script>
-    function calculateAge() {
-  let age = new Date().getFullYear() - new Date().getFullYear();
-  let month = new Date().getMonth() - new Date().getMonth();
-  if (month < 0 || (month === 0 && new Date().getDate() < new Date().getDate())) {
-    age--;
-  }
-  return age;
-}
-  </script> -->
-
 </head>
 
 <body>
@@ -56,14 +45,18 @@
               <%=animal.Size.Size%>
             </span>
             <span class="col py-1 bg-light">
-              <%= animal.Birthday %>
+              <%=Math.floor((new Date() - new Date(animal.Birthday).getTime()) / 3.15576e10);%> years
             </span>
             <span class="col py-1 bg-light">
-              <%=animal.Adopted%>
-            </span>
+              <% if (!animal.Adopted) { %>
+                <i class="text-danger">Ready for adoption</i>
+              <% } else { %>
+                <i class="text-success">Adopted</i>
+              <% } %>
+            </span>            
             <span class="col py-1 bg-light text-center">
               <button class="btn-sm btn-warning" onclick="adoptAnimal(<%=animal.id%>)">Adopt</button>
-              <button class="btn-sm btn-danger" onclick="deleteAnimal(<%=animal.id%>)">Cancel Adoption</button>
+              <button class="btn-sm btn-danger" onclick="cancelAdoption(<%=animal.id%>)">Cancel Adoption</button>
             </span>
           </div>
           <% }); %>
