--- a/views/animals.ejs
+++ b/views/animals.ejs
@@ -5,7 +5,7 @@
   <title> DAB - Adopt Animal</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/stylesheets/styles.css">
-  <script src="../js/common.js"></script>
+  <script src="../../js/common.js"></script>
 </head>
 
 <body>
@@ -53,11 +53,16 @@
               <% } else { %>
                 <i class="text-success">Adopted</i>
               <% } %>
-            </span>            
-            <span class="col py-1 bg-light text-center">
-              <button class="btn-sm btn-warning" onclick="adoptAnimal(<%=animal.id%>)">Adopt</button>
-              <button class="btn-sm btn-danger" onclick="cancelAdoption(<%=animal.id%>)">Cancel Adoption</button>
             </span>
+            <% if (user && user.roles !== 'admin') { %>
+              <span class="col py-1 bg-light text-center">
+                <button class="btn-sm btn-warning" onclick="adoptAnimal(<%=animal.id%>)">Adopt</button>
+              </span>
+            <% } else if (user && user.roles == 'admin') {%>
+              <span class="col py-1 bg-light text-center">
+                <button class="btn-sm btn-danger" onclick="cancelAdoption(<%=animal.id%>)">Cancel Adoption</button>
+              </span>
+            <% } %>
           </div>
           <% }); %>
             <hr>
